--- a/WebUI/package.json
+++ b/WebUI/package.json
@@ -21,10 +21,12 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.9",
     "@types/cordova": "0.0.34",
     "@types/cordova-plugin-device": "0.0.3",
     "@types/cordova-plugin-network-information": "^0.0.3",
     "angular2-ui-switch": "^1.2.0",
+    "bootstrap": "4.0.0-beta.2",
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.4.1",
     "rxjs": "^5.5.2",
