--- a/App/package.json
+++ b/App/package.json
@@ -13,6 +13,7 @@
         "cordova-android": "^7.0.0",
         "cordova-browser": "^5.0.3",
         "cordova-plugin-device": "^2.0.1",
+        "cordova-plugin-file": "^6.0.1",
         "cordova-plugin-network-information": "^2.0.1",
         "cordova-plugin-whitelist": "^1.3.3"
     },
@@ -20,7 +21,8 @@
         "plugins": {
             "cordova-plugin-whitelist": {},
             "cordova-plugin-device": {},
-            "cordova-plugin-network-information": {}
+            "cordova-plugin-network-information": {},
+            "cordova-plugin-file": {}
         },
         "platforms": [
             "android",
