updated npm packages and save settings to file

--- a/WebUI/src/tsconfig.app.json
+++ b/WebUI/src/tsconfig.app.json
@@ -8,6 +8,7 @@
       "systemjs",
       "cordova",
       "cordova-plugin-device",
+      "cordova-plugin-file",
       "cordova-plugin-network-information"
     ]
   },
