--- a/WebUI/package.json
+++ b/WebUI/package.json
@@ -35,10 +35,10 @@
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "1.6.3",
+    "@angular/cli": "^1.6.4",
     "@angular/compiler-cli": "^5.0.0",
     "@angular/language-service": "^5.0.0",
-    "@types/cordova-plugin-file": "^4.3.2",
+    "@types/cordova-plugin-file": "0.0.3",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
